[feat] bind account impl
