# backend/model/request/post.go
@@ -7,6 +7,14 @@ type CreatePostRequest struct {
 	ImageURLs []string `json:"image_urls" binding:"max=3,dive,url"` // 最多3张图片，每张是合法 URL
 }
 
+// UpdatePostRequest 请求参数
+type UpdatePostRequest struct {
+	PostID    uint     `json:"post_id" binding:"required"`          // 帖子 ID
+	Title     string   `json:"title" binding:"required,max=100"`    // 帖子标题 100 字符以内
+	Content   string   `json:"content" binding:"required"`          // 帖子内容
+	ImageURLs []string `json:"image_urls" binding:"max=3,dive,url"` // 最多3张图片，每张是合法 URL
+}
+
 // ListPostRequest 获取帖子列表的请求
 type ListPostRequest struct {
 	PageNum   int    `json:"page_num" binding:"required,min=1"`             // 页码
